Fixed image to be aligned to end

--- a/passion.css
+++ b/passion.css
@@ -6,7 +6,9 @@ body,html{
 .passion-page{
     background: url('./images/dot-pattern.svg'), linear-gradient(45deg, rgba(27,54,75,1) 0%, rgba(12,20,28,1) 100%);
     background-repeat: repeat;
-    padding:30px 70px;max-width: 1150px;margin:0 auto;;
+    padding:30px 70px;
+    max-width: 1150px;
+    margin:0 auto;
 }
 .passion-page__box{
     clip-path: polygon(0 8%, 7% 0, 100% 0, 100% 90%, 5% 90%, 0 100%);
@@ -25,6 +27,7 @@ body,html{
     max-width: 600px;
     max-height: 600px;
     border: 2px solid #fff;
+    align-self: flex-end;
 }
 .passion-page__heading-box{
     position: relative;
